# alfred

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 017890fc5a03_add_calendar_blocks.py  06fe3009fdde_initial.py  a3b4c5d6e7f8_add_integrations.py  b4c5d6e7f8g9_block_notes_tags.py  c5d6e7f8g9h0_add_memories.py  ca54c6078e73_add_linkedin_connections_table.py  d6e7f8g9h0i1_add_push_subscriptions.py  e2fe7ac4dc8b_add_blocked_sites.py  e7f8g9h0i1j2_add_projects.py  ec44670e1659_add_saved_links_table.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: blocked_sites.py  calendar.py  chat.py  gatekeeper.py  (+10 more)
backend/app/db/: base.py  engine.py  session.py
backend/app/llm/: anthropic_adapter.py  base.py  factory.py  ollama_adapter.py  openai_adapter.py  types.py
backend/app/models/: __init__.py  blocked_site.py  calendar_block.py  conversation.py  integration.py  linkedin_connection.py  memory.py  project.py  push_subscription.py  saved_link.py  task.py
backend/app/schemas/: blocked_site.py  calendar.py  chat.py  intent.py  linkedin_connection.py  memory.py  project.py  saved_link.py  task.py
backend/app/services/: blocked_site_service.py  calendar_service.py  chat_orchestrator.py  gatekeeper_orchestrator.py  google_calendar_service.py  intent_engine.py  linkedin_connection_service.py  linkedin_gmail_service.py  memory_service.py  project_service.py  push_service.py  saved_link_service.py  scheduler.py  task_service.py  telegram_service.py  tools.py
(+65 files in other folders)
